API expediente finalizada

--- a/public/partials/testexpediente.html
+++ b/public/partials/testexpediente.html
@@ -4,6 +4,8 @@
                 <button class="btn btn-default" ng-click="finalizar()">Finalizar</button>
                 <button class="btn btn-default" ng-click="buscar()">Buscar</button>
                 <button class="btn btn-default" ng-click="borrar()">Borrar</button>
+                <button class="btn btn-default" ng-click="suspender()">Suspender</button>
+                <button class="btn btn-default" ng-click="reiniciar()">Reiniciar</button>
                 <br />
 		<div class="alert {{respuesta.clase}}" role="alert">{{respuesta.mensaje}}</div>
 	</div>
