--- a/public/partials/welcome.html
+++ b/public/partials/welcome.html
@@ -12,14 +12,14 @@
 				</div>
 			</a>
 		</div>
-		<div class="row">
+		<!--div class="row">
 			<div ng-repeat="mes in meses" class="col-lg-1 col-md-2 col-sm-2 mes">
 				<span easypiechart="easypiechart" options="options[$index]" percent="$index &lt;= mesActual ? percent[$index] :0" class="chart">
 					<span class="percent">{{$index <= mesActual ? percent[$index] :0}}</span>
 				</span>
 				<div class="text-center">{{mes}}</div>
 			</div>
-		</div>
+		</div-->
 		<div style="margin-top:1em" class="row">
 			<div class="col-md-6 col-sm-6">
 				<div class="portlet box yellow">
