--- a/public/partials/detalles.html
+++ b/public/partials/detalles.html
@@ -124,6 +124,21 @@
 						</div>
 					</li>
 				</ul>
+					<div ng-if="$root.permisoscalculados.superuser">
+						<div>
+							<br/>
+							<button type="button" class="btn btn-default" aria-label="Left Align" ng-click="ocultarProcedimiento(procedimientoSeleccionado)">
+							  <span class="glyphicon glyphicon-align-eye-close" aria-hidden="true"></span> &nbsp;Ocultar
+							</button>							
+							<button type="button" class="btn btn-default" aria-label="Left Align" ng-disabled="tiene_hijos" ng-click="eliminarProcedimiento(procedimientoSeleccionado)">
+							  <span class="glyphicon glyphicon-align-trash" aria-hidden="true"></span> &nbsp;Eliminar procedimiento
+							</button>
+							<span ng-if="tiene_hijos"><br/>
+								No puede eliminar el procedimiento porque tiene hijos. Elimine los hijos antes de eliminar este procedimiento.
+							</span>
+						</div>
+						<br/>
+					</div>
 				<div class="panel panel-danger">
 					<div class="panel-heading">
 						<h3 class="panel-title">Responsables</h3>
