--- a/public/partials/upload.html
+++ b/public/partials/upload.html
@@ -1,5 +1,11 @@
 <div class="row">
 	<div class="col-lg-12">
+                <!--[if lt IE 9]>
+						<p style="margin-top:1em;">
+							<div class="alert alert-warning" role="alert">Esta usted utilizando una versión de Internet Explorer obsoleta con la que podrá introducir datos pero que no permite ciertas funcionalidades de la aplicación. 
+				  Actualice el navegador a la versión más reciente o instale <a target="_blank" href="https://www.google.es/chrome/browser/index.html">Chrome</a> o <a target="_blank" href="http://getfirefox.com/">Firefox</a>.</div>
+						</p>
+		<![endif]-->	
 		<p class="text-center">
 			Desde este apartado puede proceder a la carga masiva de datos según el formato acordado. Para ello puede arrastrar uno o varios ficheros a la caja mostrada.<br />Descargar ejemplos:
 		</p>
