Ocultacion y eliminacion de procedimientos

--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -26,11 +26,8 @@
 		<p style="text-align:center" ng-if="mensaje" class="alert alert-danger">{{mensaje}}</p>
 		<!--[if lt IE 9]>
 		<p style="margin-top:1em;">
-			Para un funcionamiento más fluido de esta web y de muchas otras, podrías considerar actualizar tu navegador o mejor,
-			cambiar a uno que respete los estándares web, como por ejemplo, <a target="_blank" href="https://www.google.es/chrome/browser/index.html">Chrome</a> o
-			<a target="_blank" href="http://getfirefox.com">Firefox</a>.
-			Si prefieres aún más alternativas puedes elegir aquí:
-			<a target="_blank" href="http://browsehappy.com/">http://browsehappy.com/</a>
+			Esta usted utilizando una versión de Internet Explorer obsoleta con la que podrá introducir datos pero que no permite ciertas funcionalidades de la aplicación. 
+  Actualice el navegador a la versión más reciente o instale <a target="_blank" href="https://www.google.es/chrome/browser/index.html">Chrome</a> o <a target="_blank" href="http://getfirefox.com/">Firefox</a>.
 		</p>
 		<![endif]-->
 	</div>
