upload mensaje IE

--- a/public/partials/upload.html
+++ b/public/partials/upload.html
@@ -2,7 +2,7 @@
 	<div class="col-lg-12">
         <!--[if lt IE 9]>
 				<p style="margin-top:1em;">
-					<div class="alert alert-warning" role="alert">Esta usted utilizando una versión de Internet Explorer obsoleta con la que podrá introducir datos pero que no permite ciertas funcionalidades de la aplicación. 
+					<div class="alert alert-warning" role="alert">Esta usted utilizando una versión de Internet Explorer <strong>obsoleta</storng>. Actualmente esta funcionalidad no está disponible para ete navegador. 
 		  Actualice el navegador a la versión más reciente o instale <a target="_blank" href="https://www.google.es/chrome/browser/index.html">Chrome</a> o <a target="_blank" href="http://getfirefox.com/">Firefox</a>.</div>
 				</p>
 		<![endif]-->
