--- a/public/partials/detalles.html
+++ b/public/partials/detalles.html
@@ -128,17 +128,30 @@ Actualice el navegador a la versión más reciente o instale <a target="_blank" 
                             <span ng-if="!(W && attrsanualidad_permisos[index] != 's' || $root.permisoscalculados.superuser)" >{{ procedimientoSeleccionado.periodos[anualidad][attr]!=null ? procedimientoSeleccionado.periodos[anualidad][attr] : '-' }}</span>
                         </div>
                     </li>
+                    <li>
+                        <strong>Padre:</strong>
+                        <span>&nbsp;</span>
+                        <div ng-if="!mostrarAutocompletePadre">{{nombrePadre}}
+                            <a ng-if="$root.permisoscalculados.superuser" href="" ng-click="editarPadre()">&nbsp;
+                                <span  class="glyphicon glyphicon-pencil"></span> 
+                            </a>
+                            <a ng-if="$root.permisoscalculados.superuser && procedimientoSeleccionado.padre" href="" ng-click="deletePadre()">&nbsp;
+                                <span class="glyphicon glyphicon-remove"></span> 
+                            </a>
+                        </div>
+                        <input ng-if="mostrarAutocompletePadre" placeholder="Introduce cualquier parte del c&oacute;digo o denominaci&oacute;n" class="col-lg-9 col-xs-12" type="text" ng-model="padre" typeahead-on-select="updatePadre($item)" name="padre" typeahead="showProcedimiento(procpadre) for procpadre in procedimientosPadre | codigoDenominacion:$viewValue | limitTo:10" typeahead-editable="false" />
+                    </li>
                 </ul>
+                <br />
                 <div ng-if="$root.permisoscalculados.superuser">
                     <div>
-                        <br/>
                         <button type="button" ng-if="!procedimientoSeleccionado.oculto" class="btn btn-default" aria-label="Left Align" ng-click="ocultarProcedimiento(procedimientoSeleccionado)">
                             <span class="glyphicon glyphicon-align-eye-close" aria-hidden="true"></span> &nbsp;Ocultar
                         </button>
                         <button type="button" ng-if="procedimientoSeleccionado.oculto" class="btn btn-default" aria-label="Left Align" ng-click="ocultarProcedimiento(procedimientoSeleccionado)">
                             <span class="glyphicon glyphicon-align-eye-close" aria-hidden="true"></span> &nbsp;Anular Oculto
                         </button>
-                        <button type="button" ng-if="!procedimientoSeleccionado.eliminado" class="btn btn-default" aria-label="Left Align" ng-disabled="tiene-hijos > 0"  ng-click="eliminarProcedimiento(procedimientoSeleccionado)">
+                        <button type="button" ng-if="!procedimientoSeleccionado.eliminado" class="btn btn-default" aria-label="Left Align" ng-disabled="tiene_hijos > 0"  ng-click="eliminarProcedimiento(procedimientoSeleccionado)">
                             <span class="glyphicon glyphicon-align-trash" aria-hidden="true"></span> &nbsp;Eliminar procedimiento
                         </button>
                         <span ng-if="tiene_hijos > 0"><br/>
