--- a/public/partials/procedimientocrud.html
+++ b/public/partials/procedimientocrud.html
@@ -94,7 +94,7 @@
 				</label>
 				<label for="padre" style="width:100%">
 					<span>Procedimiento padre: </span>
-					<input placeholder="Introduce cualquier parte del c&oacute;digo o denominaci&oacute;n" class="form-control" type="text" ng-model="padre" name="padre" typeahead="procpadre.denominacion for procpadre in oallprocedimientos  | filter:{denominacion:$viewValue} | limitTo:10" /> 
+                                        <input placeholder="Introduce cualquier parte del c&oacute;digo o denominaci&oacute;n" class="form-control" type="text" ng-model="padre" name="padre" typeahead="showProcedimiento(procpadre) for procpadre in oallprocedimientos  | codigoDenominacion:$viewValue | limitTo:10" /> 
 				</label>
 				<br/>
 				<p>Los permisos se establecerán en función del código de plaza, y no sobre la persona concreta, a pesar de ser mostrada como ayuda durante el registro del procedimiento.</p>
