--- a/public/partials/permisoscrud.html
+++ b/public/partials/permisoscrud.html
@@ -3,15 +3,14 @@
 <div ng-controller="PermisoCtrl" class="row">
 <div id="superuser" ng-if="$root.permisoscalculados.grantoption || $root.permisoscalculados.superuser">
 	<div ng-class="{'col-lg-5': !oculto, 'hidden': oculto}" class="left animated">
-		<div class="panel panel-danger" ng-if="$root.permisoscalculados.superuser">
+		<!-- <div class="panel panel-danger" ng-if="$root.permisoscalculados.superuser">
 			<div class="panel-heading">
 				<div class="input-group">
 				  <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
-				 <!-- <autocomplete class="form-control" ng-class="form-control" ng-model="persona_o_plaza" attr-placeholder="Buscar usuario por login o plaza..." click-activation="true" data="personas_plazas" on-select="showDetailsPermiso" ></autocomplete> 						-->
 					<input  class="form-control" ng-model="usuariosbuscado" typeahead-on-select="on_usuariobuscado_selected($item,$model,$label)" placeholder="Buscar por plaza, login carm o nombre"  type="text" typeahead-min-lengt="3" typeahead="showPersona(eresp) for eresp in getPersonas($viewValue)"  /> 				 
 				</div>				
 			</div>
-		</div>
+		</div>-->
 		<br/>
 		<div class="panel panel-danger">
 			<div class="panel-heading">
@@ -88,19 +87,19 @@
 										<span class="badge pull-right">{{eleme.numprocedimientos}}</span>
 										</p>
 											<ul ng-if="eleme.id == seleccionado.id" class="bg-warning organica_proc">
-													<li ng-repeat="proc in eleme.procedimientos | filter:texto " ng-show="eleme.id == seleccionado.id" class="organica_proc list-group-item-warning">
-														<p>
-															<strong>
-																[{{proc.codigo}}] &nbsp;
-															</strong>
-															<span ng-class="{'bg-warning':eleme.id==seleccionado.id }" ng-click="setProcSeleccionado(proc)" class="cursor">
-																{{proc.denominacion}} 
-															</span>
-														</p>
-													</li>											
-													
-													<li ng-if="!eleme.procedimientos"><i>Cargando...</i></li>
-												</ul>										
+												<li ng-repeat="proc in eleme.procedimientos | filter:texto " ng-show="eleme.id == seleccionado.id" class="organica_proc list-group-item-warning">
+													<p>
+														<strong>
+															[{{proc.codigo}}] &nbsp;
+														</strong>
+														<span ng-class="{'bg-warning':eleme.id==seleccionado.id }" ng-click="setProcSeleccionado(proc)" class="cursor">
+															{{proc.denominacion}} 
+														</span>
+													</p>
+												</li>											
+												
+												<li ng-if="!eleme.procedimientos"><i>Cargando...</i></li>
+											</ul>										
 										<ul ng-if="eleme.nodes" style="clear:both">
 											<li ng-repeat="elem in eleme.nodes |filter:texto |filter:filtrojerarquia" ng-class="{'list-group-item-danger':elem.id==seleccionado.id}">
 											<p>
