--- a/public/partials/loginas.html
+++ b/public/partials/loginas.html
@@ -31,35 +31,47 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">Confirme su elección</div>
   				<div class="panel-body">
-					<div class="table-responsive">
+					<div class="table-responsive ">
 						<table class="table table-striped table-bordered table-condensed">
+							<thead>
+								<tr>
+									<th>Campo</th>
+									<th>Su usuario</th>
+									<th>Usuario cargado</th>
+								</tr>
+							</thead>
 							<tfoot>
 								<tr>
-									<th colspan="2" class="text-center">
+									<th colspan="3" class="text-center">
 										<p>Tenga en cuenta que tras confirmar el cambio perderá sus permisos y tendrá que cerrar sesión y volver a abrirla para poder volver a recuperar su perfil.</p>
-										<button class="btn btn-default" ng-click="confirm()">Confirmar</button><br />
+										<button class="btn btn-default" ng-click="confirm()" ng-If="actualuser.login!=datosusuario.profile.login">Confirmar</button><br />
 									</th>
 								</tr>
 							</tfoot>
 							<tbody>
 								<tr>
 									<th>Login:</th>
+									<td>{{actualuser.login}}</td>
 									<td>{{datosusuario.profile.login}}</td>
 								</tr>
 								<tr>
 									<th>Nombre:</th>
+									<td>{{actualuser.nombre}}</td>
 									<td>{{datosusuario.profile.nombre}}</td>
 								</tr>
 								<tr>
 									<th>Apellidos:</th>
+									<td>{{actualuser.apellidos}}</td>
 									<td>{{datosusuario.profile.apellidos}}</td>
 								</tr>
 								<tr>
 									<th>Teléfono:</th>
+									<td>{{actualuser.telefono}}</td>
 									<td>{{datosusuario.profile.telefono}}</td>
 								</tr>
 								<tr>
 									<th>Código de plaza:</th>
+									<td>{{actualuser.codplaza}}</td>
 									<td>{{datosusuario.profile.codplaza}}</td>
 								</tr>
 							</tbody>
