--- a/public/partials/permisoscrud.html
+++ b/public/partials/permisoscrud.html
@@ -193,15 +193,18 @@
 					<td><a ng-click="changeP(permiso)" href="" ><span class="glyphicon" ng-class="{'glyphicon-ok green':isP(permiso),'glyphicon-remove burdeos':!isP(permiso)}"></span></a></td>					
 					<td>
 						<div class="btn-group pull-right">
-							<div class="btn btn-xs btn-default" title="Eliminar permiso">
-								<span class="glyphicon glyphicon glyphicon-remove" title="Eliminar del todo el permiso" ng-click="eliminarPermiso(permiso)"></span>
-							</div>	
-						</div>
-						<!--<div class="btn-group pull-right">
-							<div class="btn btn-xs btn-default" title="Editar permiso">
-								<span class="glyphicon glyphicon-edit" title="Editar el permiso"></span>
-							</div>	
-						<div>-->						
+						  <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+						    <span class="glyphicon glyphicon glyphicon-remove"></span>&nbsp;<span class="caret"></span>
+						  </button>
+						  <ul class="dropdown-menu" role="menu">
+						    <li><a href="" ng-click="eliminarPermiso(permiso)">Eliminar permiso sobre el nodo.</a></li>
+						    <li><a href="" ng-click="eliminarDefinitivamentePermiso(permiso)">Eliminar permiso completo.</a></li>
+						  </ul>
+						</div>			
+					  <button type="button" class="btn btn-xs btn-default dropdown-toggle" ng-click="eliminarPermiso(permiso)" ng-if="!$root.permisoscalculados.superuser">
+					    <span class="glyphicon glyphicon glyphicon-remove"></span>
+					  </button>
+
 					</td>
 				</tr>
 				<tr ng-repeat="procedimiento in procedimientos" class="responsable">
@@ -218,11 +221,18 @@
 					<td><span class="glyphicon glyphicon-ok gray"></span></td>					
 					<td><span class="glyphicon glyphicon-ok gray"></span></td>					
 					<td>
-						<div class="btn-group pull-right">
-							<div class="danger btn btn-xs btn-default" title="Eliminar permiso">
-								<span class="glyphicon glyphicon glyphicon-remove" title="Eliminar el permiso sobre el elemento de la estructura orgánica seleccionada" ng-click="eliminarResponable(procedimiento,r)"></span>
-							</div>	
-						<div>
+						<div class="btn-group pull-right" ng-if="$root.permisoscalculados.superuser">
+						  <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+						    <span class="glyphicon glyphicon glyphicon-remove"></span>&nbsp;<span class="caret"></span>
+						  </button>
+						  <ul class="dropdown-menu" role="menu">
+						    <li><a href="" ng-click="eliminarPermiso(permiso)">Eliminar permiso sobre el nodo.</a></li>
+						    <li><a href="" ng-click="eliminarDefinitivamentePermiso(permiso)">Eliminar permiso completo.</a></li>
+						  </ul>
+						</div>					
+						  <button type="button" class="btn btn-xs btn-default dropdown-toggle" ng-click="eliminarPermiso(permiso)" ng-if="!$root.permisoscalculados.superuser">
+						    <span class="glyphicon glyphicon glyphicon-remove"></span>
+						  </button>
 					</td>				
 				</tr>				
 			</tbody>			
@@ -395,10 +405,17 @@
 					<td><a ng-click="changeP(permiso)" href="" ><span class="glyphicon" ng-class="{'glyphicon-ok green':isP(permiso),'glyphicon-remove burdeos':!isP(permiso)}"></span></a></td>					
 					<td>
 						<div class="btn-group pull-right">
-							<div class="btn btn-xs btn-default" title="Eliminar permiso">
-								<span class="glyphicon glyphicon glyphicon-remove" title="Eliminar del todo el permiso" ng-click="eliminarPermiso(permiso)"></span>
-							</div>	
+						  <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+						    <span class="glyphicon glyphicon glyphicon-remove"></span>&nbsp;<span class="caret"></span>
+						  </button>
+						  <ul class="dropdown-menu" role="menu">
+						    <li><a href="" ng-click="eliminarPermiso(permiso)">Eliminar permiso sobre el nodo.</a></li>
+						    <li><a href="" ng-click="eliminarDefinitivamentePermiso(permiso)">Eliminar permiso completo.</a></li>
+						  </ul>
 						</div>
+					  <button type="button" class="btn btn-xs btn-default dropdown-toggle" ng-click="eliminarPermiso(permiso)" ng-if="!$root.permisoscalculados.superuser">
+					    <span class="glyphicon glyphicon glyphicon-remove"></span>
+					  </button>							
 						<!--<div class="btn-group pull-right">
 							<div class="btn btn-xs btn-default" title="Editar permiso">
 								<span class="glyphicon glyphicon-edit" title="Editar el permiso"></span>
@@ -421,10 +438,17 @@
 					<td><span class="glyphicon glyphicon-ok gray"></span></td>					
 					<td>
 						<div class="btn-group pull-right">
-							<div class="danger btn btn-xs btn-default" title="Eliminar permiso">
-								<span class="glyphicon glyphicon glyphicon-remove" title="Eliminar el permiso sobre el elemento de la estructura orgánica seleccionada" ng-click="eliminarResponable(procedimiento,r)"></span>
-							</div>	
-						<div>
+						  <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+						    <span class="glyphicon glyphicon glyphicon-remove"></span>&nbsp;<span class="caret"></span>
+						  </button>
+						  <ul class="dropdown-menu" role="menu">
+						    <li><a href="" ng-click="eliminarPermiso(permiso)">Eliminar permiso sobre el nodo.</a></li>
+						    <li><a href="" ng-click="eliminarDefinitivamentePermiso(permiso)">Eliminar permiso completo.</a></li>
+						  </ul>
+						</div>	
+						<button type="button" class="btn btn-xs btn-default dropdown-toggle" ng-click="eliminarPermiso(permiso)" ng-if="!$root.permisoscalculados.superuser">
+						  <span class="glyphicon glyphicon glyphicon-remove"></span>
+						</button>						
 					</td>				
 				</tr>				
 			</tbody>
