--- a/public/partials/detalles.html
+++ b/public/partials/detalles.html
@@ -229,7 +229,7 @@ Actualice el navegador a la versión más reciente o instale <a target="_blank" 
                         <tr ng-repeat="attr in attrstabla" ng-show="exists(attr)"> 
                             <th>{{attr| translate}}</th>
                             <td ng-repeat="val in procedimientoSeleccionado.periodos[anualidad][attr] track by $index" class="numberCell">
-                                <a e-ng-blur="changeFocus($form, $index, attr)" ng-if="W && procedimientoSeleccionado.periodos[anualidad].periodoscerrados[$index] == 0" href="#" editable-text="procedimientoSeleccionado.periodos[anualidad][attr][$index]" onaftersave="recalculate()" onbeforesave="checkNumber($data, anualidad, attr, $index)">
+                                <a e-ng-blur="changeFocus($form, $index, attr, $data)" ng-if="W && procedimientoSeleccionado.periodos[anualidad].periodoscerrados[$index] == 0" href="#" editable-text="procedimientoSeleccionado.periodos[anualidad][attr][$index]" onaftersave="recalculate()" onbeforesave="checkNumber($data, anualidad, attr, $index)">
                                     {{ procedimientoSeleccionado.periodos[anualidad][attr][$index] || 0  |numberFormat}} {{addForm(attr, $index, $form)}}
                                 </a>
                                 <span ng-if="!W || procedimientoSeleccionado.periodos[anualidad].periodoscerrados[$index] != 0">{{ procedimientoSeleccionado.periodos[anualidad][attr][$index] || 0  |numberFormat}}</span>
