--- a/public/partials/recalculate.html
+++ b/public/partials/recalculate.html
@@ -17,6 +17,7 @@
 			</div>
 		</div>
                 <button class="btn btn-default" ng-click="exportExcel()">Exportar</button>
+                <button class="btn btn-default" ng-click="actualizarPersonas()">Actualizar personas</button>
 		<div class="clear"></div>
 		<div class="alert {{respuesta.clase}}" role="alert" ng-repeat="respuesta in respuestas">{{respuesta.mensaje}}</div>
 	</div>
