Cambio de boton exportar excel y cambiado el texto de dias hababiles

--- a/public/partials/informes.html
+++ b/public/partials/informes.html
@@ -1,9 +1,6 @@
 <div class="row">
 	<div class="col-lg-12">
-		<h3>Recalcular datos</h3>
-		<p>Esta funcionalidad está destinada a tareas de mantenimiento tras actualizaciones masivas de datos desde diversas fuentes.</p>
-		<p>Ayuda a mantener la coherencia del esquema de datos interno.</p>
-
+		<h3>Informes</h3>
 		<div class="{{clasefuncionalidades}}" ng-repeat="funcionalidad in funcionalidades">
 			<div class="panel panel-danger">
 			  <div class="panel-heading">
