--- a/public/partials/permisoscrud.html
+++ b/public/partials/permisoscrud.html
@@ -328,7 +328,7 @@
 								</label>
 								<br/>
 								<label for="grantoption">
-									<input type="checkbox" ng-model="grantoption" name="grantoption" ng-disabled=" !usuarioseleccionado || propietario" value="1"/> Puede conceder permisos
+									<input type="checkbox" ng-model="cb_grantoption" name="grantoption" ng-disabled=" !usuarioseleccionado || propietario" value="1"/> Puede conceder permisos
 								</label>
 								<br/>
 								<label for="w_option">
@@ -339,7 +339,7 @@
 									<input type="checkbox" ng-model="psuperuser" name="psuperuser" ng-disabled=" !usuarioseleccionado  || propietario" value="1" /> Superusuario
 								</label>
 								<br class="clear"/>
-								<button class="btn btn-default danger" ng-disabled="is_nuevousuario || !usuarioseleccionado" ng-click="crearpermiso(usuarioseleccionado,w_option,grantoption,psuperuser)" ><span class="glyphicon glyphicon-ok"></span> <span>Crear</span></button>
+								<button class="btn btn-default danger" ng-disabled="is_nuevousuario || !usuarioseleccionado" ng-click="crearpermiso(usuarioseleccionado,w_option,cb_grantoption,psuperuser)" ><span class="glyphicon glyphicon-ok"></span> <span>Crear</span></button>
 								 &nbsp;<button class="btn btn-default danger" ng-disabled="is_nuevousuario || !usuarioseleccionado" ng-click="delegar(usuarioseleccionado)" title="concede tus permisos, salvo la capacidad de dar permiso a otros" ><span class="glyphicon glyphicon-share"></span> <span>Delegar permisos</span></button>	
 							</div>
 							<div ng-if="!$root.permisoscalculados.superuser">
@@ -430,6 +430,7 @@
 						<span style="font-size:smaller" class="badge alert-warning" ng-if="!procedimiento.responsables  && procedimiento.cod_plaza"><i>No disponible</i></span>
 					</td>
 					<td>{{procedimiento.cod_plaza}}</td>
+					<td ><span class="hidden-sm hidden-xs hidden-md" ng-init="persona=getResponsable(procedimiento)">{{persona[0].nombre}} {{ persona[0].apellidos}}</span></td>
 					<td><a href="/procedimiento/{{procedimiento.codigo}}" title="{{procedimiento.codigo}}">[{{procedimiento.codigo}}] <span class="visible-lg visible-md">{{procedimiento.denominacion}}</span></a></td>
 					<td><span class="glyphicon glyphicon-ok gray"></span></td>
 					<td><span class="glyphicon glyphicon-ok gray"></span></td>
