--- a/public/partials/informes.html
+++ b/public/partials/informes.html
@@ -1,19 +1,23 @@
 <div class="row">
-	<div class="col-lg-12">
-		<h3>Informes</h3>
-		<div class="{{clasefuncionalidades}}" ng-repeat="funcionalidad in funcionalidades">
-			<div class="panel panel-danger">
-			  <div class="panel-heading">
-			    <h3 class="panel-title">{{funcionalidad.label}}</h3>
-			  </div>
-			  <div class="panel-body">
-			  	<div class="btn-group">
-					<button ng-class="{disabled: actualizando>0}" ng-repeat="fn in funcionalidad.fn" class="btn btn-default" ng-click="invoke(fn.cmd)">{{fn.label}}</button>
-				</div>
-			  </div>
-			</div>
-		</div>
-		<div class="clear"></div>
-		<div class="alert {{respuesta.clase}}" role="alert" ng-repeat="respuesta in respuestas">{{respuesta.mensaje}}</div>
-	</div>
+    <div class="col-lg-12">
+        <h3>Informes</h3>
+        <div class="{{clasefuncionalidades}}" ng-repeat="funcionalidad in funcionalidades">
+            <div class="panel panel-danger">
+                <div class="panel-heading">
+                    <h3 class="panel-title">{{funcionalidad.label}}</h3>
+                </div>
+                <div class="panel-body">
+                    <div class="btn-group">
+                        <button ng-class="{disabled: actualizando > 0}" ng-repeat="fn in funcionalidad.fn" class="btn btn-default" ng-click="invoke(fn.cmd)">{{fn.label}}</button>
+                    </div>
+                    <br /><br />
+                    Seleccione el año:
+                    <select ng-model="anyoSelected" ng-options="a.name for a in anyos" ng-change="updateAnyoSelected(anyoSelected.code)">
+                    </select>
+                </div>
+            </div>
+        </div>
+        <div class="clear"></div>
+        <div class="alert {{respuesta.clase}}" role="alert" ng-repeat="respuesta in respuestas">{{respuesta.mensaje}}</div>
+    </div>
 </div>
